--- a/front/src/styles.scss
+++ b/front/src/styles.scss
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+$bg-global: black;
+.bg-global{
+    background-color: $bg-global;
+}
