--- a/front/src/app/home/home.component.html
+++ b/front/src/app/home/home.component.html
@@ -1,23 +1,21 @@
 <div class="container-fluid mh bg-global">
     <div class="row mh justify-content-center align-items-center">
         <div class="col-10 card px-4 py-2">
+            <div class="row justify-content-center">
+                <div class="col-auto">
+                    <h1>Tareas</h1>
+                </div>
+            </div>
             <div class="row">
                 <div class="col card">
-                    <div class="row justify-content-center">
-                        <div class="col-auto">
-                            <h1>Tareas</h1>
-                        </div>
-                    </div>
-                    <form onsubmit="save($event)">
-                        <label for="add" class="form-label">Añadir tarea:</label>
-                        <input id='add' type="text" class="form-control my-1">
-                        <input value="Guardar" type="submit" class="btn btn-pets my-2">
-                    </form>
+                    <label for="add" class="form-label">Añadir tarea:</label>
+                    <input [(ngModel)]="taskName" id='add' type="text" class="form-control my-1">
+                    <input (click)="save($event)" value="Guardar" type="submit" class="btn btn-pets my-2">
                 </div>
             </div>
             <div class="row my-2">
                 <div class="col">
-                    <div *ngIf="tasks.length === 0">
+                    <div class="text-center p-2" *ngIf="tasks.length === 0">
                         <strong>No hay tareas aún</strong>
                     </div>
                     <div class="row" *ngIf="tasks.length !== 0">
