--- a/front/src/app/registro/registro.component.html
+++ b/front/src/app/registro/registro.component.html
@@ -30,7 +30,7 @@
 
                     <div class="text-center">
                         <button type="submit" class="btn btn-info mt-3 text-light" value="continuar"
-                            onclick="return validar(this.form)">Continuar</button>
+                            (click)="getAQI()">Continuar</button>
 
                     </div>
 
