--- a/front/src/app/registro/registro.component.html
+++ b/front/src/app/registro/registro.component.html
@@ -6,24 +6,26 @@
                     <h2 class="text-center">Registro</h2>
 
                     <label for="correo">Correo Electrónico*</label>
-                    <input type="email" class="form-control" id="correo" placeholder="correo electrónico" name="correo">
-                    <span id="errorCorreo" class="error"></span><br>
+                    <input type="email" class="form-control" id="correo" placeholder="correo electrónico"
+                        [(ngModel)]='correo' name="correo">
+                    <span class="text-danger">{{mensaje1}}</span><br>
 
                     <label for="password">Contraseña*</label>
                     <input type="password" id="contrasena" class="form-control" placeholder="contraseña"
-                        name="contrasena">
-                    <span id="errorContrasena" class="error"></span><br>
+                        [(ngModel)]='password1' name="contrasena">
+                    <span class="text-danger">{{mensaje2}}</span><br>
 
                     <label for="password">Confrimacion de Contraseña*</label>
                     <input type="password" id="ConfContrasena" class="form-control" placeholder="contraseña"
-                        name="ConfContrasena">
-                    <span id="errorConfContrasena" class="error"></span><br>
+                        [(ngModel)]='password2' name="ConfContrasena">
+                    <span class="text-danger">{{mensaje3}}</span><br>
 
                     <div class="form-check pt-3">
 
-                        <input class="form-check-input" type="checkbox" id="terminos" value="" name="terminos">
+                        <input class="form-check-input" type="checkbox" id="terminos" value="" name="terminos"
+                            [(ngModel)]='terminos'>
                         <label for="terminos" class="form-check-label"> Acepto términos de uso*</label><br>
-                        <span id="errorTerminos" class="error"></span>
+                        <span class="text-danger">{{mensaje4}}</span>
                     </div>
 
                     <p class="pt-3 text-info"><strong>*Campos obligatorios</strong></p>
